www/style.css
* {
   box-sizing:border-box;
   cursor: url('img/icons/cursor.png'), auto;
}

html,body
{
	/* eliminate whitespace */
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: visible;
	scrollbar-width: none; /* disable srcrollbar for firefox */
}

/* remove spacing between html elements */
body {
	font-size: 0px;
	/*font-family: Impact;*/
	font-family:Arial Narrow, sans-serif;
	color: goldenrod;
	background-color: black;
}

/* disables scroll bar b/c it messes with % units like margins */
body::-webkit-scrollbar {
	display: none;
}

main {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-image: url('img/board.jpg');
	background-size: cover; /* Llenar sin deformar */
	background-position: center;
	background-repeat: no-repeat;
	background-color: black;
	overflow: hidden;
}

/* makes text seleciton and highlighting invisible */
::selection { background: transparent; }		/* WebKit/Blink Browsers */
::-moz-selection { background: transparent; }	/* Gecko Browsers */

::-webkit-scrollbar {
  width: 1.5vw;
}
::-webkit-scrollbar-thumb {
  background: #5559;
  border-radius: .5vw;
  height: 3vw;
  border: .35vw double black;
}
::-webkit-scrollbar-track {
  background: #131313;
}

html {
	scrollbar-color: #5559 #131313; /* mozilla */
}

#click-background {
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: 1;
}

#hand-op {
	position:absolute;
	height: 6.35vw;
	width: 4.45vw;
	top:-7vw;
	left: 33vw;
	
	border: 1px solid blue;
}

#hand-op .card { position : absolute; }

#exit-game
{
	top: 1.4vw;
	left: 1vw;
	position: absolute;
	width: 2vw;
	height: 2vw;
	background-image: url("svg/exit.svg");
	background-repeat: no-repeat;
	background-size: contain;
	opacity: 20%;
	transition: opacity 0.3s;
}
#exit-game:hover {
	filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.5));
	opacity: 100%;
}

/* ----------- settings & media player ------------------ */

#youtube {
	position: fixed;
	height: 10px;
	width: 10px;
	display: hidden;
	z-index: -100;
}

.settings-button {
	position: absolute;
	width: 2.5vw;
	height: 2.5vw;
}
.settings-button>img{
	width: 2.5vw;
	height: 2.5vw;
	filter:drop-shadow(0px 0px 2px black);
}

.settings-button.fade>img {
	 opacity: 0.2; 
}

.settings-button.fade:hover>img {
	opacity: 0.3;
}
.settings-button:hover>img {
	filter:drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.5));
}

#toggle-music {
    top: 48.9vw;
    left: 14vw;
}
#toggle-music.deck-menu { 
	top: 45.3vw;
	left: 46.7vw;
	z-index: 86;
}

#toggle-sfx {
	top: 48.9vw;
    left: 17.2vw;
}
#toggle-sfx.deck-menu {
	top: 45.3vw;
	left: 50.1vw;
	z-index: 86;
}

#toggle-notifications {
	top: 48.9vw;
    left: 20vw;
}
#toggle-notifications.deck-menu {
	display: none !important;
}

#pass-button[data-title]:hover::after
{
	bottom: -2.2vw;
	left: -0.45vw
}


/* ----------- notification bar ------------------ */

#notification-bar {
	position:absolute;
	width:100%;
	height: 14%;
	top: 43%;
	background-color: rgba(10,10,10,0.95);
	opacity: 0;
	z-index: 100;
}

#notification-bar > div { 
	width: 22.1%;
	height: 207.25%;
	top: -66.6%;
	left: 22.55%;
	position: absolute;
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
}
#notification-bar > div::after {
	position: absolute;
	left: 100.5%;
	top: 32.1%;
	width: 205%;
	height: 47.25%;
	color: goldenrod;
	font-size: 1.6vw;
	text-align:left;
	font-weight:bold;
	display: flex;
	align-items: center;
}

#notif-me-first::after { content:"You will go first"; }
#notif-op-first::after { content:"Your opponent will go first"; }

#notif-me-coin { background-image: url('img/icons/notif_me_coin.png'); }
#notif-me-coin::after { content:"You will go first"; }

#notif-op-coin { background-image: url('img/icons/notif_op_coin.png'); }
#notif-op-coin::after { content:"Your opponent will go first"; }

#notif-round-start { background-image: url('img/icons/notif_round_start.png'); }
#notif-round-start::after { content:"Round Start"; }

#notif-me-pass { background-image: url('img/icons/notif_round_passed.png'); }
#notif-me-pass::after { content:"Round passed"; }

#notif-op-pass { background-image: url('img/icons/notif_round_passed.png'); }
#notif-op-pass::after { content:"Your opponent has passed"; }

#notif-win-round { background-image: url('img/icons/notif_win_round.png'); } 
#notif-win-round::after { content:"You won the round!"; }

#notif-lose-round { background-image: url('img/icons/notif_lose_round.png'); }
#notif-lose-round::after { content:"Your opponent won the round"; }

#notif-draw-round { background-image: url('img/icons/notif_draw_round.png'); }
#notif-draw-round::after {content:"The round ended in a draw"; }

#notif-me-turn { background-image: url('img/icons/notif_me_turn.png'); } 
#notif-me-turn::after { content:"Your turn!"; }

#notif-op-turn { background-image: url('img/icons/notif_op_turn.png'); }
#notif-op-turn::after { content:"Opponent's turn"; }

#notif-north { background-image: url('img/icons/notif_north.png'); }
#notif-north::after { content:"Northern Realms faction ability triggered - North draws an additional card."; }

#notif-monsters { background-image: url('img/icons/notif_monsters.png'); }
#notif-monsters::after { content: "Monsters faction ability triggered - one randomly-chosen Monster Unit Card stays on the board"; }

#notif-scoiatael { background-image: url('img/icons/notif_scoiatael.png'); }
#notif-scoiatael::after { content: "Opponent used the Scoia'tael faction perk to go first."; }

#notif-skellige-op{ background-image: url('img/icons/notif_skellige.png'); }
#notif-skellige-op::after { content: "Opponent Skellige Ability Triggered!"; }

#notif-skellige-me{ background-image: url('img/icons/notif_skellige.png'); }
#notif-skellige-me::after { content: "Skellige Ability Triggered!"; }

/* ------- card preview ------------- */

.card-preview { position: relative; z-index: 80;}
.card-preview > .card-lg {
	position: absolute;
	top: 11.95vw;
	left: 80.3vw;
}
/* ... */

